--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -1,6 +1,9 @@
 .header {
     padding-top: 21px;
-    background-color: lightgreen;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     &-nav{
         display: flex;
         justify-content: space-between;
