add button instead link in header and fullscreen

--- a/src/sass/block/_button.scss
+++ b/src/sass/block/_button.scss
@@ -14,6 +14,10 @@
         background-color: #E39128;
         border-color: #E39128 ;
     }
+    &:focus{
+        background-color: #8F5613;
+        border-color: #8F5613 ;
+    }
 
     &_transparent{
         background-color: transparent;
@@ -24,8 +28,12 @@
             background-color: $main_orange;
             border-color: $main_orange ;
         }
+        &:focus{
+            background-color: #8F5613;
+            border-color: #8F5613 ;
+        }
     }
 
-
 }
+
 
