--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -37,7 +37,7 @@
                 border-bottom: 3px solid;
                 border-color: transparent;
                 transition: 0.5s ease;
-                &:nth-child(3){
+                &:nth-child(3), &:last-child{
                     border: none;
                 }
                 a{
